[package]
name = "qubes-gui-rust-parts"
version = "0.0.1"
authors = ["Victor Berger <victor.berger@m4x.org>", "Drakulix (Victor Brekenfeld)"]
license = "MIT"
publish = false
edition = "2018"

[lib]
name = "qubes_gui_rust"
crate-type = ["staticlib"]

[dependencies]
qubes-gui-agent-proto = { path = "gui-rust/qubes-gui-agent-proto" }

[dependencies.qubes-gui-client]
path = "gui-rust/qubes-gui-client"

[dependencies.qubes-gui]
path = "gui-rust/qubes-gui"

[dependencies.qubes-castable]
path = "gui-rust/qubes-castable"

[features]
default = []

[patch.crates-io]
# wayland-sys = { path = "wayland-rs/wayland-sys" }
# wayland-scanner = { path = "wayland-rs/wayland-scanner" }
# wayland-client = { path = "wayland-rs/wayland-client" }
# wayland-server = { path = "wayland-rs/wayland-server" }
# wayland-protocols = { path = "wayland-rs/wayland-protocols" }
# wayland-commons = { path = "wayland-rs/wayland-commons" }
# wayland-cursor = { path = "wayland-rs/wayland-cursor" }
# wayland-egl = { path = "wayland-rs/wayland-egl" }
